--- a/developer.html
+++ b/developer.html
@@ -132,6 +132,12 @@
             <button type="button" id="runFirebasePriceBtn" style="background:#8bc34a;">ID & 가격 Firestore 업로드</button>
             <button type="button" id="runFirebaseOtherBtn" style="background:#9c27b0;">ID 외 정보 Firestore 업로드</button>
         </div>
+
+        <h2>스케줄러 키기/끄기</h2>
+        <div class="button-group">
+            <button type="button" id="schedulerOnBtn" style="background:#912641;">On</button>
+            <button type="button" id="schedulerOffBtn" style="background:#412fac;">Off</button>
+        </div>
         
         <form id="envForm">
             <h2>페이지 범위 설정</h2>
@@ -301,6 +307,28 @@
                 showToast('ID 외 정보 Firestore 업로드 완료!');
             } else {
                 showToast('업로드 실패!');
+            }
+        };
+
+        document.getElementById('schedulerOnBtn').onclick = async function () {
+            showToast('스케줄러를 다시 시작합니다...');
+            const res = await fetch('/scheduler/on', { method: 'POST' });
+            if (res.ok) {
+                const data = await res.json();
+                showToast(data.message || '스케줄러가 다시 시작되었습니다!');
+            } else {
+                showToast('스케줄러 시작에 실패했습니다.');
+            }
+        };
+
+        document.getElementById('schedulerOffBtn').onclick = async function () {
+            showToast('스케줄러를 일시정지합니다...');
+            const res = await fetch('/scheduler/off', { method: 'POST' });
+            if (res.ok) {
+                const data = await res.json();
+                showToast(data.message || '스케줄러가 일시정지되었습니다!');
+            } else {
+                showToast('스케줄러 일시정지에 실패했습니다.');
             }
         };
     </script>
